<resources>
    <string name="logo">Logo</string>
    <string name="action_logout">Logout</string>

    <string name="menu_games">Games</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_playOnline">Play Online</string>
    <string name="menu_terms_conditions">Terms and Conditions</string>
    <string name="menu_logout">Logout</string>
    <string name="won">Won</string>
    <string name="kes_100">KES 100</string>
    <string name="view_game">View Game</string>
    <string name="random">Random</string>
    <string name="_200">+/-200</string>
    <string name="_500">+/-500</string>
    <string name="refresh">Refresh</string>
    <string name="no_bets">No Bets Placed Yet</string>
    <string name="USD0">USD 0</string>
    <string name="USD10">USD 10</string>
    <string name="USD5">USD 5</string>
    <string name="USD2">USD 2</string>
    <string name="USD1">USD 1</string>
    <string name="advert">Advert</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_amount_text">Enter amount and use your M-Pesa pin to authorize the transaction. Maximum deposit amount 5,000 KSH.</string>
    <string name="mpesa_charges">M-Pesa charges apply.</string>
    <string name="stake">Stake</string>
    <string name="withdraw">withdraw</string>
    <string name="withdrawal_fee">Withdrawal fee: </string>
    <string name="withdrawal_fee_15">Withdrawal fee: 15</string>
    <string name="withdrawal_fee_22">Withdrawal fee: 22</string>
    <string name="withdrawal_amount">Minimum withdrawal amount via M-Pesa is 10.00 KSH and maximum withdrawal amount via M-Pesa is 70,000.00 KSH.</string>
    <string name="withdrawal_fee_for_amounts">For withdrawal between 10 and 1000 KSH fee is 15 KSH, and for withdrawal between 1001 and 70,000 KSH fee is 22 KSH.</string>
    <string name="payout">Payout</string>
    <string name="service_agreement">Service Agreement</string>
    <string name="support_email">support@chess-bet.com</string>
    <string name="bet_online">Bet Online</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>

    <!--Slider Details-->
    <string name="welcome_to_chess_bet">Welcome To Chess Bet</string>
    <string name="welcome_to_chess_bet_description">Chess Bet is a P2P Chess Betting Platform. Chess Bet gives chess players of all skill levels
    a chance to earn money from chess by staking and wining money after a chess game</string>

    <string name="step_one">Deposit</string>
    <string name="step_one_description">Deposit money in your e-wallet on chess bet</string>

    <string name="step_two">Play Chess Online</string>
    <string name="step_two_description">After depositing you can stake a minimum of $1. After game play winner takes 80% of the total game value.
    If it was a $10 game the final winner will get $18 deposited in the e-wallet</string>

    <string name="step_three">Remember To Win</string>
    <string name="step_three_description">We recommend downloading chess learning apps such as Chess MVP to brush up on you chess playing skills.
    Remember this is a game of skill not chance</string>

    <string name="step_four">Cash Out</string>
    <string name="step_four_description">There is not a better feeling when you get to cash out your hard earned money. Chess Bet offers
    real time payment options making sure you can cash out as soon as you win that extra game.</string>
</resources>
