<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/app_name">
            <menu>
                <item
                    android:id="@+id/nav_games"
                    android:title="@string/menu_games" />
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/nav_playOnline"
                    android:title="@string/menu_playOnline" />
            </menu>
        </item>
        <item android:title="@string/service_agreement">
            <menu>
                <item
                    android:id="@+id/nav_terms_conditions"
                    android:title="@string/menu_terms_conditions" />
            </menu>
        </item>
    </group>
</menu>
